Fix reload detection on mobile

--- a/src/base.css
+++ b/src/base.css
@@ -15,8 +15,6 @@ html, body, #mount {
 	height: 100vh;
 	margin: 0;
 	padding: 0;
-
-	overflow: hidden;
 }
 body {
 	display: flex;
